# itrtg_pet_analyzer_dungeon_planner

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  pets.yaml
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: pages.yml  refresh-wiki.yml
crates/enum-sync/: Cargo.toml  README.md
crates/enum-sync/src/: lib.rs  main.rs  parse.rs  registry.rs
crates/enum-sync/tests/: dumps.rs
crates/gui/: Cargo.toml  index.html
crates/gui/src/: app.rs  data.rs  log_parser.rs  main.rs  platform.rs  state.rs  style.rs
crates/gui/src/views/: analyzer.rs  chamber.rs  dungeon.rs  log_viewer.rs  mod.rs  widgets.rs
crates/gui/src/views/save_editor/: mod.rs  registry.rs  session.rs
crates/gui/src/views/save_editor/sections/: adventure.rs  afky_god.rs  bulk.rs  campaigns.rs  challenges.rs  crystal.rs  daily.rs  dungeons.rs  equip_builder.rs  equipment.rs  fishing.rs  gems.rs  inventory.rs  mod.rs  partners.rs  pets.rs  planet.rs  progression.rs  raw_tree.rs  resources.rs  stats.rs  village.rs
crates/models/: Cargo.toml
crates/models/src/: action.rs  campaign_bonus_rules.rs  campaign_input.rs  campaign_override.rs  core.rs  dungeon.rs  equipment.rs  export.rs  lib.rs  main_stats.rs  names.rs  planner_config.rs  wiki.rs
crates/models/tests/: dungeon_yaml.rs
crates/pet-importer/: Cargo.toml
crates/pet-importer/src/: main.rs  parser.rs
crates/planner/: Cargo.toml
crates/planner/src/: campaign.rs  equipment.rs  growth.rs  lib.rs  merge.rs  solver.rs
crates/save-parser/: Cargo.toml
crates/save-parser/src/: container.rs  edit.rs  formulas.rs  items.rs  labels.rs  lib.rs  lzf.rs  main.rs  model.rs  raw.rs  redact.rs  to_export.rs  to_main_stats.rs  tree.rs
crates/save-parser/tests/: real_save.rs  to_export.rs  to_main_stats.rs
crates/wiki-extractor/: Cargo.toml
crates/wiki-extractor/src/: main.rs  parser.rs
data/: Dungeon Equipment Recommendations - Wiki - Source.txt  Introduction to Dungeons - Wiki - Source.txt  Pet Stats Export.txt  Pets Source.txt  app_state.yaml  campaign_bonuses.yaml  campaign_overrides.yaml  dungeon_recommendations.yaml  equipment_catalog.yaml  implementation_notes.md  pet_constraints.yaml  pet_special_info.yaml  planner_config.yaml  updated-pet-analyzer.jsx  wiki_pets.yaml
data/dungeon_logs/: 2026-03-29_21-33_Forest.html  2026-03-29_21-33_Scrapyard.html  2026-03-29_21-33_WaterTemple.html  death_2026-03-30_09-36_Scrapyard.html
data/research/: batch1_findings.md  batch2_findings.md  batch5_findings.md  batch6_findings.md
reference/: ITRTG_Pet_Dungeons_and_Evolving_Info.md  Main Stats Export.txt  campaign_bonus_design.md  campaign_bonus_survey.tsv  campaign_simulation.md  chamber_validation.md  editor_architecture_review.md  food_and_feedings.md  growth_chamber_status.md  main_stats_export.md  pet_class_and_combat_mechanics.md
reference/class_xp_validation/: 1_export_before_campaign_end.txt  2_in_game_results.txt  README.md
reference/real_growth_campaign/: 1_export_before_campaign_end.txt  2_in_game_results.txt  3_export_after_campaign.txt  4_export_after_feeding.txt  README.md
reference/research/: batch3_findings.md  batch4_findings.md
reference/save_file_deserialization/: Dungeon Teams Export.txt  FINDINGS.md  Main Stats Export.txt  ManualSave_2026-06-09.txt  Pet Equips Export.txt  Pet Stats Export.txt  cs_crosscheck_handoff.md  decode_roadmap.md  expand_save.ps1  normal_stats_investigation.md  tracking_targets.md
reference/save_file_deserialization/Kongregate/: experiments.md
reference/save_file_deserialization/save_day_six_mid_training/: ManualSave_2026-06-12.txt
reference/save_file_deserialization/save_new_rebirth_mid_training/: ManualSave_2026-06-13-second.txt  (+3 more)
references/: Pet Stats Export.txt  dungeon_recommendations.yaml
resources/fonts/: NOTICE.txt
scripts/: add_equipment_stats.js
src/: main.rs  models.rs  parser.rs
(+26 files in other folders)
