[package]
name = "itrtg-gui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "itrtg"
path = "src/main.rs"

[dependencies]
itrtg-models = { path = "../models" }
itrtg-planner = { path = "../planner" }
pet-importer = { path = "../pet-importer" }
wiki-extractor = { path = "../wiki-extractor" }

eframe = "0.31"
egui_extras = { version = "0.31", features = ["default"] }
arboard = "3"
rfd = "0.15"
reqwest = { version = "0.12", features = ["blocking"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
