[package]
name = "pet-importer"
version = "0.1.0"
edition = "2024"

[lib]
name = "pet_importer"
path = "src/lib.rs"

[[bin]]
name = "pet-importer"
path = "src/main.rs"

[dependencies]
itrtg-models = { path = "../models" }
anyhow = "1"
regex = "1"
serde_yaml = "0.9"

# Binary-only deps (not needed when used as a library from the GUI)
clap = { version = "4", features = ["derive"], optional = true }
arboard = { version = "3", optional = true }

[features]
default = ["cli"]
cli = ["dep:clap", "dep:arboard"]
