[package]
name = "wiki-extractor"
version = "0.1.0"
edition = "2024"

[lib]
name = "wiki_extractor"
path = "src/lib.rs"

[[bin]]
name = "wiki-extractor"
path = "src/main.rs"

[dependencies]
itrtg-models = { path = "../models" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
reqwest = { version = "0.12", features = ["blocking"] }
serde_yaml = "0.9"
