[package]
name = "wiki-extractor"
version = "0.1.0"
edition = "2024"

[lib]
name = "wiki_extractor"
path = "src/lib.rs"

[[bin]]
name = "wiki-extractor"
path = "src/main.rs"

[dependencies]
itrtg-models = { path = "../models" }
anyhow = "1"
regex = "1"
serde_yaml = "0.9"

# Binary-only deps (not needed when used as a library from the GUI)
clap = { version = "4", features = ["derive"], optional = true }
reqwest = { version = "0.12", features = ["blocking"], optional = true }

[features]
default = ["cli"]
cli = ["dep:clap", "dep:reqwest"]
